--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "author": "pablof7z",
     "license": "MIT",
     "dependencies": {
-        "@nostr-dev-kit/ndk": "^0.3.27",
-        "@nostr-dev-kit/ndk-cache-redis": "^1.3.0",
+        "@nostr-dev-kit/ndk": "^0.7.0",
+        "@nostr-dev-kit/ndk-cache-redis": "^1.7.0",
         "@scure/base": "^1.1.1",
         "@types/yargs": "^17.0.24",
         "@typescript-eslint/eslint-plugin": "^5.57.0",
@@ -33,6 +33,7 @@
         "eslint": "^8.37.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
+        "ndk-cli": "^0.5.1",
         "yargs": "^17.7.1"
     },
     "devDependencies": {
